--- a/homepage.html
+++ b/homepage.html
@@ -110,9 +110,7 @@
         <h1>Health Vigilance Hub</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="https://www.google.com/maps/search/doctors+near+me/@11.3098605,75.9347108,14z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">Doctor Near me </a></li>
+                
                 <li><a href="login.html">Profile</a></li>
             </ul>
         </nav>
@@ -120,8 +118,8 @@
 
     <section class="hero" id="home">
         <h1>WELCOME</h1>
-        <p>A predictive outbreak alert system to safeguard communities through data-driven insights and gamification.</p>
-        <button type="submit">REPORT SYMPTOMS</button>
+        <p>A predictive outbreak alert system to safeguard communities through data-driven insights .</p>
+        <button type="submit">BOOK MY OP</button>
     </section>
 
     <section class="features" id="features">
@@ -132,14 +130,14 @@
             <p>View interactive heatmaps of outbreak trends in your area.</p>
         </div>
         <div class="feature">
-            <img src="https://i.pinimg.com/736x/71/10/03/711003a0ecb383a0b1f4207606b589c3.jpg" alt="Gamification">
-            <h3>Leaderboard</h3>
-            <p>Earn badges and rewards for contributing reliable reports.</p>
+            <img src="https://i.pinimg.com/736x/73/7b/8e/737b8efcc1f8da2672394281eaf95249.jpg" alt="Gamification">
+            <h3>Meet doctor online</h3>
+            <p>consultation made easier meet your doctor virtually.</p>
         </div>
         <div class="feature">
-            <img src="https://i.pinimg.com/736x/17/42/b8/1742b81636580504020c93cf1f77decc.jpg" alt="Offline Access">
-            <h3>Offline Access</h3>
-            <p>Submit reports even in areas with limited connectivity.</p>
+            <img src="https://i.pinimg.com/736x/48/c9/18/48c918ff79bedb3c6ae598ae7539ba81.jpg" alt="Offline Access">
+            <h3>Book my slot</h3>
+            <p>Book your vaccine slots in advance at your nearest hospital.</p>
         </div>
         <div class="feature">
             <img src="https://i.pinimg.com/736x/b4/e4/77/b4e477617a0d53a128e80839d79f0960.jpg" alt="Community Alerts">
