--- a/pofiles2.html
+++ b/pofiles2.html
@@ -48,7 +48,7 @@
         }
 
         .action-buttons button {
-            background-color:#9fc5eb ;
+            background-color:#468fd8 ;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -59,7 +59,7 @@
         }
 
         .action-buttons button:hover {
-            background-color: #16a085;
+            background-color: #2e00c7;
         }
 
         .vaccine-tracking ul {
