--- a/pofiles2.html
+++ b/pofiles2.html
@@ -120,7 +120,7 @@
         <div class="action-buttons">
             <button onclick="alert('OP Ticket booked successfully!')">Edit profile</button>
             <button onclick="alert('Home visit scheduled!')">Schedule Home Visit</button>
-            <button onclick="alert('Vaccine details updated!')">Update Vaccine Info</button>
+            <button onclick="alert('Vaccine details updated!')"> Next Vaccine </button>
         </div>
     </div>
 </body>
