--- a/next vaccine.html
+++ b/next vaccine.html
@@ -48,7 +48,7 @@
         }
 
         .action-buttons button {
-            background-color: #1abc9c;
+            background-color: #6196cb;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -59,7 +59,7 @@
         }
 
         .action-buttons button:hover {
-            background-color: #16a085;
+            background-color: #1642a0;
         }
     </style>
 </head>
