--- a/next vaccine2.html
+++ b/next vaccine2.html
@@ -31,16 +31,20 @@
             margin-bottom: 20px;
         }
 
-        .vaccine-section h2 {
+        .vaccine-section label {
+            display: block;
+            margin: 10px 0 5px;
+            font-weight: bold;
             color: #34495e;
-            border-bottom: 2px solid #eaeaea;
-            padding-bottom: 5px;
-            margin-bottom: 10px;
         }
 
-        .vaccine-details {
-            margin: 5px 0;
-            line-height: 1.6;
+        .vaccine-section input {
+            width: calc(100% - 20px);
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 16px;
         }
 
         .action-buttons {
@@ -68,15 +72,32 @@
         <h1>Vaccine Details</h1>
 
         <div class="vaccine-section">
+            <form id="vaccineForm">
+                <label for="vaccineName">Vaccine Name:</label>
+                <input type="text" id="vaccineName" name="vaccineName" placeholder="Enter vaccine name" required>
 
-            <p class="vaccine-details"><strong>Vaccine Name:</strong> </p>
-            <p class="vaccine-details"><strong> Date:</strong> </p>
-            <p class="vaccine-details"><strong>Hospital:</strong> </p>
-        </div>
+                <label for="date">Date:</label>
+                <input type="date" id="date" name="date" required>
 
-        <div class="action-buttons">
-            <button onclick="alert('Slot booked successfully!')">Book My Slot</button>
+                <label for="hospital">Hospital:</label>
+                <input type="text" id="hospital" name="hospital" placeholder="Enter hospital name" required>
+
+                <div class="action-buttons">
+                    <button type="submit">Book My Slot</button>
+                </div>
+            </form>
         </div>
     </div>
+
+    <script>
+        document.getElementById('vaccineForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent form submission
+            const vaccineName = document.getElementById('vaccineName').value;
+            const date = document.getElementById('date').value;
+            const hospital = document.getElementById('hospital').value;
+
+            alert(`Slot booked successfully!\n\nVaccine: ${vaccineName}\nDate: ${date}\nHospital: ${hospital}`);
+        });
+    </script>
 </body>
 </html>
